# NoodleExtensions

./: .clang-format  .clang-tidy  .clangd  .gitignore  Android.mk  Application.mk  CMakeLists.txt  README.md  bmbfmod.json  build.ps1  copy.ps1  copy.sh  createqmod.ps1  extern.cmake  mod.json  mod.template.json  ndk-stack.ps1  qpm.json  qpm.shared.json  qpm_defines.cmake
.github/actions/canary-ndk/: action.yml
.github/workflows/: build-ndk.yml  publish.yml
include/: AssociatedData.h  Constants.hpp  FakeNoteHelper.h  NECaches.h  NEConfig.h  NEHooks.h  NEJSON.h  NELogger.h  NEUtils.hpp  SceneTransitionHelper.hpp  SharedUpdate.h  SpawnDataHelper.h  TimeSourceHelper.h  Vector.h
include/Animation/: AnimationHelper.h  AnimationProperty.h  Easings.h  Events.h  ParentObject.h  PlayerTrack.h  PointDefinition.h  PointDefinitionInterpolation.h  Track.h
include/CustomJSONData/: CustomBeatmapData.h  CustomBeatmapSaveData.h  CustomJSONDataHooks.h  JSONWrapper.h
include/NoodleExtensions/: NEHooks.h  SpawnDataHelper.h
include/chroma/shared/: ObstacleAPI.hpp  utils.hpp
scripts/: build.ps1  buildBMBF.ps1  buildBMBF.sh  buildQMOD.sh  cleanQuest.sh  copy.ps1  copy.sh  debug.sh  log.sh  recording.sh  unstripLog.ps1  unstripLog.sh
src/: AssociatedData.cpp  CustomBeatmapData.cpp  CustomBeatmapData.h  CustomBeatmapSaveData.cpp  CustomBeatmapSaveData.h  FakeNoteHelper.cpp  NEConfig.cpp  NELogger.cpp  NoodleExtensions.cpp  SpawnDataHelper.cpp  TimeSourceHelper.cpp  main.cpp
src/Animation/: AnimationHelper.cpp  Easings.cpp  Events.cpp  ParentObject.cpp  PlayerTrack.cpp  PointDefinition.cpp  PointDefinitionInterpolation.cpp  Track.cpp
src/CustomJSONData/: CustomBeatmapData.cpp  CustomBeatmapSaveData.cpp  CustomJSONDataHooks.cpp  JSONWrapper.cpp
src/Hooks/: BeatmapDataLoader.cpp  BeatmapDataTransformHelper.cpp  BeatmapObjectCallBackController.cpp  BeatmapObjectManager.cpp  BeatmapObjectSpawnMovementData.cpp  BeatmapObjectsInTimeRowProcessor.cpp  ClampPatches.cpp  EnvironmentSceneSetup.cpp  GameplayCoreInstaller.cpp  NoteController.cpp  NoteFloorMovement.cpp  NoteJump.cpp  NotesInTimeRowProcessor.cpp  ObstacleController.cpp  OutdatedMods.cpp  SpawnRotationProcessor.cpp
src/Hooks/FakeNotes/: BadNoteCutEffectSpawner.cpp  (+12 more)
src/NoodleExtensions/: BeatmapObjectSpawnMovementData.cpp  FakeNoteHelper.cpp  NoodleExtensions.cpp  ObstacleController.cpp  SpawnDataHelper.cpp  SpawnRotationProcessorProcessBeatmapEventData.cpp
(+34 files in other folders)
